[package]
name = "textcode"
version = "0.2.1"
authors = ["Cesbo Developers Team"]
description = "Text encoding/decoding library. Supports: UTF-8, ISO6937, ISO8859, GB2312"
documentation = "https://docs.rs/textcode"
repository = "https://github.com/cesbo/textcode"
edition = "2018"
keywords = [
    "encoding",
    "unicode",
    "charset",
]
license = "MIT"
readme = "README.md"
